--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -1,6 +1,5 @@
 export { ContentPage as default } from "~/layouts";
-import { PageHeader } from "~/components";
-import { PageBreadcrumbs } from "~/renderer";
+import { PageHeader, PageBreadcrumbs } from "~/components";
 
 <PageHeader title="Development pages"></PageHeader>
 <PageBreadcrumbs></PageBreadcrumbs>
