--- a/src/pages/dev/lexicon/+Page.mdx
+++ b/src/pages/dev/lexicon/+Page.mdx
@@ -1,5 +1,5 @@
 import { PageHeader } from "~/components";
-import { PageBreadcrumbs } from "~/renderer";
+import { PageBreadcrumbs } from "~/components";
 import "./main.styl";
 import { Image } from "./index";
 import { MacrostratIcon } from "~/components";
