--- a/src/pages/dev/test-site/donate/+Page.mdx
+++ b/src/pages/dev/test-site/donate/+Page.mdx
@@ -1,5 +1,5 @@
 import { PageHeader } from "~/components";
-import { PageBreadcrumbs } from "~/renderer";
+import { PageBreadcrumbs } from "~/components";
 import { Image, Navbar, Footer } from "../index";
 import "./main.styl";
 import "../main.styl";
