--- a/src/pages/dev/test-site/people/+Page.mdx
+++ b/src/pages/dev/test-site/people/+Page.mdx
@@ -1,5 +1,5 @@
 import { PageHeader } from "~/components";
-import { PageBreadcrumbs } from "~/renderer";
+import { PageBreadcrumbs } from "~/components";
 import { Image, Navbar, Footer } from "../index";
 import "./main.styl";
 import "../main.styl";
@@ -42,7 +42,7 @@ import { MacrostratIcon } from "~/components";
                 <a href="mailto: mazko@wisc.edu"><e>mazko -at wisc.edu</e></a>
             </div>
         </div>
-            
+
         <div class="person-info" id="michael">
             <Image className="back-img" src="michael.jpg"></Image>
             <div class="text">
@@ -56,7 +56,7 @@ import { MacrostratIcon } from "~/components";
         <Image className="back-img" src="casey.jpg"></Image>
             <div class="text">
                 <n><a href="https://idzikowski-casey.github.io/personal-site/" target="_blank">Casey Idzikowski</a></n> \
-                <t>Research Specialist, Developer (former)</t> 
+                <t>Research Specialist, Developer (former)</t>
             </div>
         </div>
 
@@ -64,7 +64,7 @@ import { MacrostratIcon } from "~/components";
         <Image className="back-img" src="daniel.jpg"></Image>
             <div class="text">
                 <n><a href="http://strata.geology.wisc.edu" target="_blank">Daniel Segessenmen</a></n> \
-                <t>Graduate Student (former)</t> 
+                <t>Graduate Student (former)</t>
             </div>
         </div>
 
@@ -72,7 +72,7 @@ import { MacrostratIcon } from "~/components";
         <Image className="back-img" src="shan.jpg"></Image>
             <div class="text">
                 <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Shan Ye</a></n> \
-                <t>Graduate Student (former)</t> 
+                <t>Graduate Student (former)</t>
             </div>
         </div>
 
@@ -80,7 +80,7 @@ import { MacrostratIcon } from "~/components";
         <Image className="back-img" src="ben.jpg"></Image>
             <div class="text">
                 <n><a href="http://strata.geology.wisc.edu" target="_blank">Ben Linzmeier</a></n> \
-                <t>Postdoctoral Scholar (former)</t> 
+                <t>Postdoctoral Scholar (former)</t>
             </div>
         </div>
     </div>
@@ -90,7 +90,7 @@ import { MacrostratIcon } from "~/components";
         <Image className="back-img" src="afiqah.jpg"></Image>
             <div class="text">
                 <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Afiqah Rafi</a></n> \
-                <t>Undergrad Student (former)</t> 
+                <t>Undergrad Student (former)</t>
             </div>
         </div>
 
@@ -98,7 +98,7 @@ import { MacrostratIcon } from "~/components";
         <Image className="back-img" src="sharon.jpg"></Image>
             <div class="text">
                 <n><a href="http://geoscience.wisc.edu/geoscience/people/student/?id=1007" target="_blank">Sharon McMullen</a></n> \
-                <t>Researcher (former)</t> 
+                <t>Researcher (former)</t>
             </div>
         </div>
 
@@ -124,7 +124,7 @@ import { MacrostratIcon } from "~/components";
         <Image className="back-img" src="erika.jpg"></Image>
             <div class="text">
                 <n><a href="https://github.com/ItoErika" target="_blank">Erika Ito</a></n> \
-                <t>Research Intern (former)</t> 
+                <t>Research Intern (former)</t>
             </div>
         </div>
 
@@ -132,7 +132,7 @@ import { MacrostratIcon } from "~/components";
         <Image className="back-img" src="noel.jpg"></Image>
             <div class="text">
                 <n><a href="http://sedpaleo.org" target="_blank">Noel Heim</a></n> \
-                <t>Researcher (former)</t> 
+                <t>Researcher (former)</t>
             </div>
         </div>
 
@@ -140,7 +140,7 @@ import { MacrostratIcon } from "~/components";
         <Image className="back-img" src="john.jpg"></Image>
             <div class="text">
                 <n><a href="http://www.johnjcz.com" target="_blank">John Czaplewski</a></n> \
-                <t>Next-level Developer (former)</t> 
+                <t>Next-level Developer (former)</t>
             </div>
         </div>
 
