--- a/src/pages/dev/concepts/+Page.mdx
+++ b/src/pages/dev/concepts/+Page.mdx
@@ -1,5 +1,5 @@
 export { ContentPage as default } from "~/layouts";
-import { PageBreadcrumbs } from "~/renderer";
+import { PageBreadcrumbs } from "~/components";
 
 <PageBreadcrumbs></PageBreadcrumbs>
 
