--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -9,7 +9,7 @@ import { PageHeader, PageBreadcrumbs } from "~/components";
 - [User interface tests](/dev/ui-tests)
 - [Feedback](/dev/feedback)
 - [Map filter](/dev/filtering)
-- [CDR Tileserver](/integrations/criticalmaas/ta1-maps)
+- [CriticalMAAS](/integrations/criticalmaas)
 - [Sources](/dev/sources)
 
 - [Concept apps](/dev/concepts)
