--- a/src/pages/dev/test-site/main-page/new-home/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/new-home/+Page.mdx
@@ -14,31 +14,31 @@ import { MacrostratIcon } from "~/components";
 
 [//]: # "Start Page" 
 <div class="start-card card">
-    <Image className="cover-img back-img" src="cover_large.jpg"></Image>
-    <div class="text">
-      <span class="header">
-        <h1 id="main-title" class="big">Macrostrat<h2 class="version">v2</h2></h1>
-      </span>
-      <p class="big-text">A platform for geological data exploration, integration, and analysis</p>
-      <div class="stats">
-        <div class="stat">
-          <span class="top-stat" id="n_columns">1,400</span>
-          <span class="top-stat-label">Regional Rock Columns</span>
-        </div>
-        <div class="stat">
-          <span class="top-stat" id="n_units">33,903</span>
-          <span class="top-stat-label">Rock Units</span>
-        </div>
-        <div class="stat">
-          <span class="top-stat" id="n_polys">2,500,000</span>
-          <span class="top-stat-label">Geologic Map Polygons</span>
-        </div>
-        <div class="stat">
-          <span class="top-stat" id="n_names">51,212</span>
-          <span class="top-stat-label"><a href="Macrostrat_strat_names.html" target="_blank">Stratigraphic Names</a></span>
-        </div>
+  <Image className="cover-img back-img" src="cover_large.jpg"></Image>
+  <div class="text">
+    <span class="start-header">
+      <h1 id="main-title" class="big">Macrostrat<h2 class="version">v2</h2></h1>
+    </span>
+    <p class="big-text">A platform for geological data exploration, integration, and analysis</p>
+    <div class="stats">
+      <div class="stat">
+        <span class="top-stat" id="n_columns">1,400</span>
+        <span class="top-stat-label">Regional Rock Columns</span>
+      </div>
+      <div class="stat">
+        <span class="top-stat" id="n_units">33,903</span>
+        <span class="top-stat-label">Rock Units</span>
+      </div>
+      <div class="stat">
+        <span class="top-stat" id="n_polys">2,500,000</span>
+        <span class="top-stat-label">Geologic Map Polygons</span>
+      </div>
+      <div class="stat">
+        <span class="top-stat" id="n_names">51,212</span>
+        <span class="top-stat-label"><a href="Macrostrat_strat_names.html" target="_blank">Stratigraphic Names</a></span>
       </div>
     </div>
+  </div>
 </div>
 
 [//]: # "Map Interface"
@@ -152,7 +152,7 @@ import { MacrostratIcon } from "~/components";
 <div class="header">
   <a href="https://secure.supportuw.org/give/?id=E0A03FA3-B2A0-431C-83EE-A121A04EEB5D" target="_blank"><h1>Donate Now</h1></a>
 </div>
-<div class="cdonte-card card">
+<div class="donate-card card">
   <Image className="back-img donate-img" src="donate_medium.jpg"></Image>
   <p class="donate-text">
     Grant funding, principally from the <a href="http://www.nsf.gov" target="_blank">U.S. National Science Foundation</a>, got Macrostrat off the ground and keeps us innovating, but maintaining and growing a free and open digital resource involves ongoing expenses beyond the grant cycle, like annual certificate renewals, cloud server hosting and backup storage that keep your connection safe, domain name registrations that keep us located on the web, and system upgrades to keep us fast and efficient. If you would like to help us continue to grow and provide free resources, you can do so with a one-time or recurring gift to the UW Foundation Paleontology Program Fund in Geology. Thank you!
