--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -12,6 +12,13 @@ import { PageHeader, PageBreadcrumbs } from "~/components";
 - [CriticalMAAS](/integrations/criticalmaas)
 - [Sources](/dev/sources)
 
+## xDD integration
+
+- [Embeddings](/dev/embeddings)
+- [Extractions](/dev/extractions)
+
+## Apps
+
 - [Concept apps](/dev/concepts)
 - [Built with Macrostrat](/dev/apps)
 - [Test Site](/dev/test-site/main-page)
