Updated page name to legend-affinity

--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -14,7 +14,7 @@ import { PageHeader, PageBreadcrumbs } from "~/components";
 
 ## xDD integration
 
-- [Embeddings](/dev/embeddings)
+- [Map legend affinity](/dev/legend-affinity)
 - [Extractions](/dev/extractions)
 
 ## Apps
