Moved extractions to an xDD integrations page

--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -15,7 +15,7 @@ import { PageHeader, PageBreadcrumbs } from "~/components";
 ## xDD integration
 
 - [Map legend affinity](/dev/legend-affinity)
-- [Extractions](/dev/extractions)
+- [Extractions](/integrations/xdd/extractions)
 
 ## Apps
 
