--- a/pages/integrations/xdd/+Page.mdx
+++ b/pages/integrations/xdd/+Page.mdx
@@ -7,4 +7,5 @@ for discovering data from the scientific literature.
 
 - Stratigraphic units linked to papers in Rockd and Macrostrat
 - Extracting [structured data](/integrations/xdd/extractions) from papers
+- [Model runs](/integrations/xdd/runs)
 - Training machine learning models for [Map legend affinity](/dev/legend-affinity)
