Updated table management

--- a/pages/integrations/xdd/+Page.mdx
+++ b/pages/integrations/xdd/+Page.mdx
@@ -7,6 +7,7 @@ for discovering data from the scientific literature.
 
 - Stratigraphic units linked to papers in Rockd and Macrostrat
 - Extracting [structured data](/integrations/xdd/extractions) from papers
+- [Data types](/integrations/xdd/types) for feedback
 - [Model runs](/integrations/xdd/runs)
 - [Feedback](/integrations/xdd/feedback) on extractions
 - Training machine learning models for [Map legend affinity](/dev/legend-affinity)
