Move app to /dev/column-editor prefix

--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -12,6 +12,11 @@ import { PageHeader, PageBreadcrumbs } from "~/components";
 - [CriticalMAAS](/integrations/criticalmaas)
 - [Sources](/dev/sources)
 
+
+## Column editing
+
+- [Column editor](/dev/column-editor)
+
 ## xDD integration
 
 - [Map legend affinity](/dev/legend-affinity)
