--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -23,3 +23,7 @@ import { PageHeader, PageBreadcrumbs } from "~/components";
 - [Built with Macrostrat](/dev/apps)
 - [Test Site](/dev/test-site/main-page)
 - [Documentation](/dev/docs)
+
+## Map layers
+
+- [Map layers development pages](/dev/map-layers)
