--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -1,29 +1,27 @@
 export { ContentPage as default } from "~/layouts";
-import { PageHeader, PageBreadcrumbs } from "~/components";
+import { PageHeaderV2 } from "~/components";
 
-<PageHeader title="Development pages"></PageHeader>
-<PageBreadcrumbs></PageBreadcrumbs>
+<PageHeaderV2 title="Development" showLogo></PageHeaderV2>
+
+## [Map development pages](/dev/map)
 
 - [Globe](/dev/globe)
 - [Paleogeography](/dev/paleo)
-- [User interface tests](/dev/ui-tests)
-- [Feedback](/dev/feedback)
-- [Map filter](/dev/filtering)
-- [CriticalMAAS](/integrations/criticalmaas)
-- [Sources](/dev/sources)
+
 
 ## xDD integration
 
-- [Map legend affinity](/dev/legend-affinity)
+- [Map legend affinity](/dev/map/legend-affinity)
 - [Extractions](/integrations/xdd/extractions)
 
 ## Apps
 
 - [Concept apps](/dev/concepts)
 - [Built with Macrostrat](/dev/apps)
-- [Test Site](/dev/test-site/main-page)
+- [New homepage](/dev/test-site/main-page)
 - [Documentation](/dev/docs)
 
-## Map layers
+## Miscellaneous
 
-- [Map layers development pages](/dev/map-layers)
+- [User interface tests](/dev/ui-tests)
+- [CriticalMAAS](/integrations/criticalmaas)
