Moved color schemes dev page

--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -3,21 +3,22 @@ import { PageHeaderV2 } from "~/components";
 
 <PageHeaderV2 title="Development" showLogo></PageHeaderV2>
 
-## [Map development pages](/dev/map)
+## Maps
 
+- [Map development pages](/dev/map)
 - [Globe](/dev/globe)
 - [Paleogeography](/dev/paleo)
 
 
-## xDD integration
+## xDD
 
 - [Map legend affinity](/dev/map/legend-affinity)
 - [Extractions](/integrations/xdd/extractions)
 
-## Apps
+## Concept apps
 
-- [Concept apps](/dev/concepts)
-- [Built with Macrostrat](/dev/apps)
+- [Concept app index](/dev/concepts)
+- [Built with Macrostrat](/dev/test-site/about)
 - [New homepage](/dev/test-site/main-page)
 - [Documentation](/dev/docs)
 
