--- a/pages/dev/map/+Page.mdx
+++ b/pages/dev/map/+Page.mdx
@@ -6,8 +6,12 @@ import { PageHeaderV2 } from "~/components";
 Pages for development of Macrostrat mapping interfaces
 
 - [Map layers](/dev/map/layers) - core map layers from Macrostrat's tile server
-- [Weaver](/dev/map/weaver) - point data experiments
 - [Server-side filtering](/dev/map/filter) - Map filtering using Macrostrat's *v3* API
 - [Legend affinity](/dev/map/legend-affinity) - xDD integration
 - [Sources](/dev/map/sources) - Map data sources and "reference geometries"
 - [Color schemes](/dev/map/color-schemes) - Color schemes for map layers
+
+## Integrations
+
+- [StraboSpot](/dev/map/strabospot) - StraboSpot development integration
+- [Weaver](/dev/map/weaver) - point data experiments
