Remove PageHeader in favor of PageHeaderV2

--- a/pages/+Page.mdx
+++ b/pages/+Page.mdx
@@ -1,9 +1,8 @@
 export { ContentPage as default } from "~/layouts";
-import { macrostratInstance } from "@macrostrat-web/settings";
-import { PageHeaderV2 } from "~/components";
+import { PageHeader } from "~/components";
 import { LinkCard } from "~/components/cards";
 
-<PageHeaderV2 title="Macrostrat"></PageHeaderV2>
+<PageHeader title="Macrostrat"></PageHeader>
 
 <LinkCard href="/map" title="Map interface">
   Macrostrat's main map interface showing a harmonized view of the Earth's crust
