--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -1,7 +1,7 @@
 export { ContentPage as default } from "~/layouts";
-import { PageHeaderV2 } from "~/components";
+import { PageHeader } from "~/components";
 
-<PageHeaderV2 title="Development" showLogo></PageHeaderV2>
+<PageHeader title="Development" showLogo></PageHeader>
 
 ## Maps
 
