--- a/pages/dev/map/+Page.mdx
+++ b/pages/dev/map/+Page.mdx
@@ -1,7 +1,7 @@
 export { ContentPage as default } from "~/layouts";
-import { PageHeaderV2 } from "~/components";
+import { PageHeader } from "~/components";
 
-<PageHeaderV2 title="Map pages" showLogo></PageHeaderV2>
+<PageHeader title="Map pages" showLogo></PageHeader>
 
 Pages for development of Macrostrat mapping interfaces
 
