--- a/pages/dev/map/+Page.mdx
+++ b/pages/dev/map/+Page.mdx
@@ -15,3 +15,5 @@ Pages for development of Macrostrat mapping interfaces
 
 - [StraboSpot](/dev/map/strabospot) - StraboSpot development integration
 - [Weaver](/dev/map/weaver) - point data experiments
+- [Rockd Checkins](/dev/map/rockd-checkins) - Rockd Checkins
+
