Added rockd-strabospot dev page

--- a/pages/dev/map/+Page.mdx
+++ b/pages/dev/map/+Page.mdx
@@ -15,5 +15,6 @@ Pages for development of Macrostrat mapping interfaces
 
 - [StraboSpot](/dev/map/strabospot) - StraboSpot development integration
 - [Weaver](/dev/map/weaver) - point data experiments
-- [Rockd Checkins](/dev/map/rockd-checkins) - Rockd Checkins
+- [Rockd checkins](/dev/map/rockd-checkins) - Rockd checkins
+- [Rockd + StraboSpot](/dev/map/rockd-strabospot) - Rockd + StraboSpot integration
 
