--- a/pages/dev/test-site/people/+Page.mdx
+++ b/pages/dev/test-site/people/+Page.mdx
@@ -14,8 +14,7 @@ import { MacrostratIcon } from "~/components";
 <p class="subtitle">major contributors to the project </p>
 <div class="line"></div>
 
-<div class="people" id="people">
-    <div class="left">
+<div class="people">
         <div class="person-info" id="shanan">
             <Image className="back-img" src="shanan.jpg"></Image>
             <div class="text">
@@ -83,9 +82,7 @@ import { MacrostratIcon } from "~/components";
                 <t>Postdoctoral Scholar (former)</t>
             </div>
         </div>
-    </div>
 
-    <div class="right">
         <div class="person-info" id="afiqah">
         <Image className="back-img" src="afiqah.jpg"></Image>
             <div class="text">
@@ -152,7 +149,6 @@ import { MacrostratIcon } from "~/components";
                 <a href="mailto: punkish@eidesis.org"><e>punkish at eidesis.org</e> </a>
             </div>
         </div>
-    </div>
 </div>
 
 [//]: # "Footer"
