--- a/pages/dev/test-site/people/+Page.mdx
+++ b/pages/dev/test-site/people/+Page.mdx
@@ -17,137 +17,154 @@ import { MacrostratIcon } from "~/components";
 <div class="people">
         <div class="person-info" id="shanan">
             <Image className="back-img" src="shanan.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="http://strata.geology.wisc.edu" target="_blank">Shanan Peters</a></n>\
                 <t>Professor, Database Developer</t> \
                 <a href="mailto: peters@geology.wisc.edu"><e>peters -at geology.wisc.edu</e></a>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="daven">
             <Image className="back-img" src="daven.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="https://davenquinn.com" target="_blank">Daven Quinn</a></n> \
                 <t>Research Scientist, Developer</t> \
                 <a href="mailto: daven.quinn@wisc.edu"><e>daven.quinn -at wisc.edu</e></a>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="evgeny">
             <Image className="back-img" src="evgeny.jpg"></Image>
-            <div class="text">
+            <p>
                 <n>Evgeny Mazko</n> \
                 <t>Graduate Student</t> \
                 <a href="mailto: mazko@wisc.edu"><e>mazko -at wisc.edu</e></a>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="michael">
             <Image className="back-img" src="michael.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="https://geoscience.wisc.edu/geoscience/people/staff/name/michael-mcclennen/" target="_blank">Michael McClennen</a></n> \
                 <t>Senior Programmer Analyst</t> \
-                <a href="mailto: mmcclenn@geology.wisc.edu"><e>mmcclenn -at- geology.wisc.edu</e></a>
-            </div>
+                <a href="mailto: mmcclenn@geology.wisc.edu"><e>mmcclenn -at geology.wisc.edu</e></a>
+            </p>
         </div>
 
         <div class="person-info" id="casey">
         <Image className="back-img" src="casey.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="https://idzikowski-casey.github.io/personal-site/" target="_blank">Casey Idzikowski</a></n> \
                 <t>Research Specialist, Developer (former)</t>
-            </div>
+            </p>
+        </div>
+
+        <div class="person-info" id="david">
+            <Image className="back-img" src="david.jpg"></Image>
+            <p>
+                <n>David Sklar</n> \
+                <t>Undergraduate Research Assistant</t> \
+                <a href="mailto: dsklar@wisc.edu"><e>dsklar -at wisc.edu</e> </a>
+            </p>
+        </div>
+
+        <div class="person-info" id="amy">
+            <Image className="back-img" src="amy.jpg"></Image>
+            <p>
+                <n>Amy Fromandi</n> \
+                <a href="mailto: punkish@eidesis.org"><e>punkish at eidesis.org</e> </a>
+            </p>
         </div>
 
         <div class="person-info" id="daniel">
         <Image className="back-img" src="daniel.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="http://strata.geology.wisc.edu" target="_blank">Daniel Segessenmen</a></n> \
                 <t>Graduate Student (former)</t>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="shan">
         <Image className="back-img" src="shan.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Shan Ye</a></n> \
                 <t>Graduate Student (former)</t>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="ben">
         <Image className="back-img" src="ben.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="http://strata.geology.wisc.edu" target="_blank">Ben Linzmeier</a></n> \
                 <t>Postdoctoral Scholar (former)</t>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="afiqah">
         <Image className="back-img" src="afiqah.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Afiqah Rafi</a></n> \
                 <t>Undergrad Student (former)</t>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="sharon">
         <Image className="back-img" src="sharon.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="http://geoscience.wisc.edu/geoscience/people/student/?id=1007" target="_blank">Sharon McMullen</a></n> \
                 <t>Researcher (former)</t>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="andrew">
         <Image className="back-img" src="andrew.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="http://www.azstrata.org" target="_blank">Andrew Zaffos</a></n> \
                 <t>Data Mobilization and Research Scientist</t> \
                 <a href="mailto: azaffos@email.arizona.edu"><e>azaffos -at- email.arizona.edu</e></a>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="jon">
         <Image className="back-img" src="jon.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="http://www.jonhusson.com" target="_blank">Jon Husson</a></n> \
                 <t>Postdoctoral Researcher (former)</t> \
                 <a href="mailto: jhusson@uvic.ca"><e>jhusson - at - uvic.ca</e></a>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="erika">
         <Image className="back-img" src="erika.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="https://github.com/ItoErika" target="_blank">Erika Ito</a></n> \
                 <t>Research Intern (former)</t>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="noel">
         <Image className="back-img" src="noel.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="http://sedpaleo.org" target="_blank">Noel Heim</a></n> \
                 <t>Researcher (former)</t>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="john">
         <Image className="back-img" src="john.jpg"></Image>
-            <div class="text">
+            <p>
                 <n><a href="http://www.johnjcz.com" target="_blank">John Czaplewski</a></n> \
                 <t>Next-level Developer (former)</t>
-            </div>
+            </p>
         </div>
 
         <div class="person-info" id="puneet">
-        <Image className="back-img" src="puneet.jpg"></Image>
-            <div class="text">
+            <Image className="back-img" src="puneet.jpg"></Image>
+            <p>
                 <n><a href="http://punkish.org" target="_blank">Puneet Kishor</a></n> \
                 <t>Generally Ignored</t> \
-                <a href="mailto: punkish@eidesis.org"><e>punkish at eidesis.org</e> </a>
-            </div>
+                <a href="mailto: punkish@eidesis.org"><e>punkish -at eidesis.org</e> </a>
+            </p>
         </div>
 </div>
 
