update about page

--- a/pages/dev/test-site/about/Page.mdx
+++ b/pages/dev/test-site/about/Page.mdx
@@ -43,7 +43,7 @@ import { MacrostratIcon } from "~/components";
       <b>In presentations:</b> Acknowledge Macrostrat by name. You may also include any of the Macrostrat logos accessible on this webpage.
       \
       \
-      <b>In publications:</b> Acknowledge Macrostrat as the source of any information or data. In publications, you may cite our most recent infrastructure paper, <a href="https://doi.org/10.1029/2018GC007467" target="_blank">Peters et al. (2018)</a>. In addition, you should also include citations to the original references associated with the data set that was used. These references are accessible from the API. If you would like your paper listed in the official publications, please contact us and we will provide a citation and link.
+      In publications: Acknowledge Macrostrat as the source of any information or data. In publications, you may cite our most recent infrastructure paper, <a href="https://doi.org/10.1029/2018GC007467" target="_blank">Peters et al. (2018)</a>. In addition, you should also include citations to the original references associated with the data set that was used. These references are accessible from the API. If you would like your paper listed in the official publications, please contact us and we will provide a citation and link.
     </div>
   </div>
 
@@ -65,14 +65,6 @@ import { MacrostratIcon } from "~/components";
     </div>
   </div>
 </div>
-
-[//]: # "API"
-<div id="api">
-  <div class="api-circle"><div id="api-circle-text">API</div></div>
-  <div id="api-text">All data contained in the Macrostrat database are freely available via our Application Programming Interface (API), which provides a convinient way to retrieve data for analysis or application creation. For more information head over to the <a href="/api">API root</a> to explore available routes.</div>
-</div>
-
-<Image className="rock-border" src="rocks-border.jpg"></Image>
 
 [//]: # "Apps"
 <div id="apps">
