--- a/pages/lex/+Page.mdx
+++ b/pages/lex/+Page.mdx
@@ -12,6 +12,12 @@ researchers and data providers.
 <LinkCard href="/lex/lithology" title="Lithologies">
   A tree-based representation of lithologies
 </LinkCard>
+<LinkCard href="/lex/environments" title="Environments">
+  A tree-based representation of environments
+</LinkCard>
+<LinkCard href="/lex/economics" title="Economics">
+  A tree-based representation of economics
+</LinkCard>
 <LinkCard href="/lex/strat-names" title="Stratigraphic names"></LinkCard>
 
 **[Sift](/sift)**, Macrostrat's legacy lexicon app, is still available for use
