Some updates to pages

--- a/pages/+Page.mdx
+++ b/pages/+Page.mdx
@@ -35,6 +35,6 @@ These products come from a variety of sources throughout the geosciences.
   Layers and testbed apps that aren't ready for prime time
 </LinkCard>
 
-<LinkCard href="/docs/" title="Documentation">
+<LinkCard href="/docs" title="Documentation">
   Macrostrat documentation
 </LinkCard>
