--- a/pages/lex/+Page.mdx
+++ b/pages/lex/+Page.mdx
@@ -21,10 +21,9 @@ researchers and data providers.
 <LinkCard href="/lex/intervals" title="Intervals">
   A tree-based representation of intervals
 </LinkCard>
-<LinkCard href="/lex/timescales" title="Timescales">
-  A searchable interface for timescales
-</LinkCard>
+<LinkCard href="/lex/timescales" title="Timescales"></LinkCard>
 <LinkCard href="/lex/strat-names" title="Stratigraphic names"></LinkCard>
+<LinkCard href="/lex/groups" title="Column Groups"></LinkCard>
 
 **[Sift](/sift)**, Macrostrat's legacy lexicon app, is still available for use
 as it is gradually brought into this new framework.
