dev page ready to be main

--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -23,7 +23,7 @@ import { PageHeader } from "~/components";
 
 - [Concept app index](/dev/concepts)
 - [Built with Macrostrat](/dev/test-site/about)
-- [New homepage](/dev/test-site/main-page)
+- [New homepage](/dev/test-site/)
 - [Documentation](/dev/docs)
 
 ## Miscellaneous
