Banish global styles from Sift

--- a/pages/lex/+Page.mdx
+++ b/pages/lex/+Page.mdx
@@ -9,21 +9,33 @@ the USGS's [Geolex](https://ngmdb.usgs.gov/Geolex/search), and other
 sources. The lexicon is continually updated in partnership with
 researchers and data providers.
 
+## Stratigraphic names
+
+<LinkCard href="/lex/strat-names" title="Stratigraphic names">
+  Names of rock units, organized hierarchically
+</LinkCard>
+<LinkCard href="/lex/strat-name-concepts" title="Stratigraphic concepts">
+  Concepts that capture relationships between differently-named rock units
+</LinkCard>
+
+## Dictionaries
+
+<LinkCard href="/lex/intervals" title="Intervals">
+  Time intervals
+</LinkCard>
+<LinkCard href="/lex/timescales" title="Timescales">
+  Continuous representations of relative geologic time
+</LinkCard>
 <LinkCard href="/lex/lithology" title="Lithologies">
-  A tree-based representation of lithologies
+  Names of geologic materials
 </LinkCard>
 <LinkCard href="/lex/environments" title="Environments">
-  A tree-based representation of environments
+  Depositional environments and formation mechanisms
 </LinkCard>
 <LinkCard href="/lex/economics" title="Economics">
-  A tree-based representation of economics
+  Economic uses of geologic materials
 </LinkCard>
-<LinkCard href="/lex/intervals" title="Intervals">
-  A tree-based representation of intervals
-</LinkCard>
-<LinkCard href="/lex/timescales" title="Timescales"></LinkCard>
-<LinkCard href="/lex/strat-names" title="Stratigraphic names"></LinkCard>
-<LinkCard href="/lex/strat-name-concepts" title="Stratigraphic name concepts"></LinkCard>
+
 
 **[Sift](/sift)**, Macrostrat's legacy lexicon app, is still available for use
 as it is gradually brought into this new framework.
