--- a/pages/lex/+Page.mdx
+++ b/pages/lex/+Page.mdx
@@ -9,17 +9,11 @@ the USGS's [Geolex](https://ngmdb.usgs.gov/Geolex/search), and other
 sources. The lexicon is continually updated in partnership with
 researchers and data providers.
 
-## Stratigraphic names
-
-<LinkCard href="/lex/strat-names" title="Stratigraphic names">
-  Names of rock units, organized hierarchically
-</LinkCard>
-<LinkCard href="/lex/strat-name-concepts" title="Stratigraphic concepts">
-  Concepts that capture relationships between differently-named rock units
-</LinkCard>
-
 ## Dictionaries
 
+<LinkCard href="/lex/strat-names" title="Stratigraphic names">
+  Names of rock units, organized hierarchically as well as concepts that capture relationships between differently-named rock units
+</LinkCard>
 <LinkCard href="/lex/intervals" title="Intervals">
   Time intervals
 </LinkCard>
