--- a/pages/dev/user-features/saved-locations/+Page.mdx
+++ b/pages/dev/user-features/saved-locations/+Page.mdx
@@ -8,7 +8,7 @@ export default function DevelopmentPage() {
     const [error, setError] = useState(null);
 
     useEffect(() => {
-        fetch("https://dev2.macrostrat.org/api/pg/saved_locations")
+        fetch("https://dev.macrostrat.org/api/pg/saved_locations")
             .then((response) => {
                 if (!response.ok) {
                     throw new Error("Network response was not ok " + response.statusText);
