Added a skeletal page

--- a/pages/dev/+Page.mdx
+++ b/pages/dev/+Page.mdx
@@ -13,6 +13,7 @@ import { PageHeader } from "~/components";
 ## Column editing
 
 - [Column editor](/dev/column-editor)
+- [Column footprint editor](/dev/column-footprint-editor)
 
 ## xDD integration
 
